--- a/Packs/NonSupported/Playbooks/playbook-QRadar_-_Get_offense_correlations_V3_1_0.yml
+++ b/Packs/NonSupported/Playbooks/playbook-QRadar_-_Get_offense_correlations_V3_1_0.yml
@@ -1,8 +1,7 @@
-id: 'QRadar - Get offense correlations '
+id: QRadar - Get offense correlations
 version: -1
-name: 'QRadar - Get offense correlations '
+name: QRadar - Get offense correlations
 toversion: 3.1.0
-fromversion: ""
 description: |-
   Run on a QRadar offense to get more information
 
