--- a/Packs/DeprecatedContent/Playbooks/playbook-QRadar_-_Get_offense_correlations_.yml
+++ b/Packs/DeprecatedContent/Playbooks/playbook-QRadar_-_Get_offense_correlations_.yml
@@ -6,7 +6,7 @@ description: "DEPRECATED - Use the `QRadar - Get offense correlations v2` instea
   \ QRadar offense to get more information\n\n* Get all correlations relevant to the\
   \ offense\n* Get all logs relevant to the correlations (not done by default, set\
   \ \"GetCorrelationLogs\" to \"True\")\n\nInputs:\n* GetCorrelationLogs (default:\
-  \ False)\n* MaxLogsCount (default: 20)"
+  \ False)\n* MaxLogsCount (default: 20) - modify for test"
 hidden: true
 starttaskid: '0'
 tasks:
