--- a/Packs/Cybereason/Integrations/Cybereason/Cybereason.yml
+++ b/Packs/Cybereason/Integrations/Cybereason/Cybereason.yml
@@ -3,7 +3,7 @@ commonfields:
   id: Cybereason
   version: -1
 configuration:
-- display: Server URL (e.g. https://192.168.0.1)
+- display: Server URL (e.g. https://192.168.0.1) - modify for test
   name: server
   required: true
   type: 0
